tests/rosetta/transpiler/CPP/calkin-wilf-sequence.error
compile: exit status 1
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:24:181: warning: multi-character character constant [-Wmultichar]
   24 |     else if(val.type() == typeid(std::vector<int64_t>)) { const auto& v = std::any_cast<const std::vector<int64_t>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
      |                                                                                                                                                                                     ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:25:209: warning: multi-character character constant [-Wmultichar]
   25 |     else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
      |                                                                                                                                                                                                                 ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:25:295: warning: multi-character character constant [-Wmultichar]
   25 |     else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
      |                                                                                                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:26:189: warning: multi-character character constant [-Wmultichar]
   26 |     else if(val.type() == typeid(std::vector<std::string>)) { const auto& v = std::any_cast<const std::vector<std::string>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
      |                                                                                                                                                                                             ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:27:183: warning: multi-character character constant [-Wmultichar]
   27 |     else if(val.type() == typeid(std::vector<std::any>)) { const auto& v = std::any_cast<const std::vector<std::any>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; any_to_stream(os, v[i]); } os << ']'; }
      |                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:28:215: warning: multi-character character constant [-Wmultichar]
   28 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:28:251: warning: multi-character character constant [-Wmultichar]
   28 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:52:17: error: template argument 1 is invalid
   52 | std::vector<auto> calkinWilf(int64_t n);
      |                 ^
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:52:17: error: template argument 2 is invalid
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: In function ‘auto bigrat(int64_t, int64_t)’:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:59:14: error: expected primary-expression before ‘auto’
   59 |     return ((auto)(a) / (auto)(b));
      |              ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:59:14: error: expected ‘)’ before ‘auto’
   59 |     return ((auto)(a) / (auto)(b));
      |             ~^~~~
      |              )
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:59:35: error: expected ‘)’ before ‘;’ token
   59 |     return ((auto)(a) / (auto)(b));
      |            ~                      ^
      |                                   )
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: At global scope:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:62:17: error: template argument 1 is invalid
   62 | std::vector<auto> calkinWilf(int64_t n) {
      |                 ^
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:62:17: error: template argument 2 is invalid
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: In function ‘int calkinWilf(int64_t)’:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:63:21: error: template argument 1 is invalid
   63 |     std::vector<auto> seq = {};
      |                     ^
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:63:21: error: template argument 2 is invalid
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:64:41: error: request for member ‘push_back’ in ‘__tmp’, which is of non-class type ‘int’
   64 |     seq = ([&]{ auto __tmp = seq; __tmp.push_back(bigrat(1, 1)); return __tmp; }());
      |                                         ^~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: In function ‘int calkinWilf(int64_t)’:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:67:25: error: template argument 1 is invalid
   67 |         std::vector<auto> prev = seq[(i - 1)];
      |                         ^
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:67:25: error: template argument 2 is invalid
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:67:37: error: invalid types ‘int[int64_t {aka long int}]’ for array subscript
   67 |         std::vector<auto> prev = seq[(i - 1)];
      |                                     ^
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:68:44: error: ‘num’ was not declared in this scope; did you mean ‘enum’?
   68 |         boost::multiprecision::cpp_int a = num(prev);
      |                                            ^~~
      |                                            enum
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:69:44: error: ‘denom’ was not declared in this scope
   69 |         boost::multiprecision::cpp_int b = denom(prev);
      |                                            ^~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:72:38: error: expected primary-expression before ‘auto’
   72 |         t = ((double)(t) * (double)((auto)(2)));
      |                                      ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:72:38: error: expected ‘)’ before ‘auto’
   72 |         t = ((double)(t) * (double)((auto)(2)));
      |                                     ~^~~~
      |                                      )
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:72:48: error: expected ‘)’ before ‘;’ token
   72 |         t = ((double)(t) * (double)((auto)(2)));
      |                                    ~           ^
      |                                                )
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:72:48: error: expected ‘)’ before ‘;’ token
   72 |         t = ((double)(t) * (double)((auto)(2)));
      |             ~                                  ^
      |                                                )
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:74:38: error: expected primary-expression before ‘auto’
   74 |         t = ((double)(t) + (double)((auto)(1)));
      |                                      ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:74:38: error: expected ‘)’ before ‘auto’
   74 |         t = ((double)(t) + (double)((auto)(1)));
      |                                     ~^~~~
      |                                      )
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:74:48: error: expected ‘)’ before ‘;’ token
   74 |         t = ((double)(t) + (double)((auto)(1)));
      |                                    ~           ^
      |                                                )
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:74:48: error: expected ‘)’ before ‘;’ token
   74 |         t = ((double)(t) + (double)((auto)(1)));
      |             ~                                  ^
      |                                                )
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:75:15: error: expected primary-expression before ‘auto’
   75 |         t = ((auto)(1) / t);
      |               ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:75:15: error: expected ‘)’ before ‘auto’
   75 |         t = ((auto)(1) / t);
      |              ~^~~~
      |               )
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:75:28: error: expected ‘)’ before ‘;’ token
   75 |         t = ((auto)(1) / t);
      |             ~              ^
      |                            )
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:76:45: error: request for member ‘push_back’ in ‘__tmp’, which is of non-class type ‘int’
   76 |         seq = ([&]{ auto __tmp = seq; __tmp.push_back(t); return __tmp; }());
      |                                             ^~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: In function ‘int64_t termNumber(const std::vector<long int>&)’:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:106:14: error: ‘repeat’ was not declared in this scope
  106 |         b = (repeat(d, n) + b);
      |              ^~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: In function ‘int main()’:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:143:21: error: template argument 1 is invalid
  143 |     std::vector<auto> cw = calkinWilf(20);
      |                     ^
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:143:21: error: template argument 2 is invalid
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:148:25: error: template argument 1 is invalid
  148 |         std::vector<auto> r = cw[i];
      |                         ^
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:148:25: error: template argument 2 is invalid
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:148:33: error: invalid types ‘int[int64_t {aka long int}]’ for array subscript
  148 |         std::vector<auto> r = cw[i];
      |                                 ^
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:149:72: error: ‘num’ was not declared in this scope; did you mean ‘enum’?
  149 |         std::string s = ([&]{ std::ostringstream ss; any_to_stream(ss, num(r));
      |                                                                        ^~~
      |                                                                        enum
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: In function ‘int main()’:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:151:14: error: ‘denom’ was not declared in this scope
  151 |         if ((denom(r) != 1)) {
      |              ^~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:155:51: error: conversion from ‘int64_t’ {aka ‘long int’} to non-scalar type ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} requested
  155 |         std::cout << ((([&]{ std::string __s = (i + (int64_t)(1)); while(__s.size() < 2) __s = std::string(" ") + __s; return __s; }()) + std::string(": ")) + s);
      |                                                ~~~^~~~~~~~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:162:89: error: ‘num’ was not declared in this scope; did you mean ‘enum’?
  162 |     std::cout << ((((((std::string("") + ([&]{ std::ostringstream ss; any_to_stream(ss, num(r));
      |                                                                                         ^~~
      |                                                                                         enum
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/calkin-wilf-sequence.cpp:163:94: error: ‘denom’ was not declared in this scope
  163 |  return ss.str(); }())) + std::string("/")) + ([&]{ std::ostringstream ss; any_to_stream(ss, denom(r));
      |                                                                                              ^~~~~
